# phylo

./: README.md  pyproject.toml
dat/: K_len.npy  K_lev.npy  K_tax.npy  species_names.txt  tax.csv  tax_report.txt
doc/report/: bib.bib  document.tex
exp/: plots.ipynb
src/: dataset.py  preprocessing.py  taxonomy.ipynb
